Grade ways concurrently Remove unneeded and buggy haversine

--- a/web/example_website.html
+++ b/web/example_website.html
@@ -94,8 +94,7 @@
 
                             vector.style = {
                                 strokeWidth: 3,
-                                strokeColor: lineColor,
-                                label: ''+feature.Options.OSMID
+                                strokeColor: lineColor
                             };
                             vectorLayer.addFeatures(vector);
 
