--- a/web/example_website.html
+++ b/web/example_website.html
@@ -1,7 +1,17 @@
 <html>
     <body>
-        <div id="mapdiv" style="height: 80%"></div>
-        <button id="clear-btn">Clear map</button>
+        <div id="mapdiv" style="height: 60%"></div>
+        <div><button id="clear-btn">Clear map</button>
+        </div>
+        <div id="chart-container" style="clear: both; height: 400px; width: 80%; min-width: 380px; display: none; float: left"></div>
+        <div id="route-data-container" style="height: 400px; width: 10%; padding-left: 20px; display: none; float: left;">
+            <h2>Route info</h2>
+            <p>Route length: <strong id="overall-length"></strong></p>
+            <p>Paved roads: <strong id="paved-percentage"></strong></p>
+            <p>Unpaved roads: <strong id="unpaved-percentage"></strong></p>
+            <p>Total incline: <strong id="incline"></strong></p>
+            <a id="download-kml" href="#">Download KML</a>
+        </div>
 
         <script
             src="https://code.jquery.com/jquery-3.4.1.min.js"
@@ -9,7 +19,9 @@
             crossorigin="anonymous">
         </script>
         <script src="http://www.openlayers.org/api/OpenLayers.js"></script>
-        <script type="text/javascript" src="http://maplib.khtml.org/khtml.maplib/khtml_all.js"> </script>
+        <script src="https://code.highcharts.com/highcharts.js"></script>
+        <script src="https://code.highcharts.com/modules/annotations.js"></script>
+
         <script>
             map = new OpenLayers.Map("mapdiv");
             map.addLayer(new OpenLayers.Layer.OSM());
@@ -52,10 +64,10 @@
 
                 if (routeFrom === null) {
                     routeFrom = lonlat.lat + "," + lonlat.lon;
-                    startEndMarkers.addMarker(new OpenLayers.Marker(event_point));
+                    startEndMarkers.addMarker(new OpenLayers.Marker(event_point, new OpenLayers.Icon('red-marker.png')));
                 } else {
                     routeTo = lonlat.lat + "," + lonlat.lon;
-                    startEndMarkers.addMarker(new OpenLayers.Marker(event_point));
+                    startEndMarkers.addMarker(new OpenLayers.Marker(event_point, new OpenLayers.Icon('green-marker.png')));
                 }
 
                 if (routeFrom === null || routeTo === null) {
@@ -65,9 +77,40 @@
                 $.ajax({
                     url: "http://localhost:8000/route?from="+routeFrom+"&to="+routeTo,
                     success: function(result) {
+                        $('#chart-container').show();
+                        let chartData = [];
+                        let distance = 0;
+                        let elevationIncline = 0;
+                        let pavedDistance = 0;
+                        let endElevation = 0;
                         let routeFeatures = JSON.parse(result);
 
                         routeFeatures.forEach(function(feature) {
+                            let lineColor = '#000000';
+                            if (feature.Elevation != null) {
+                                chartData.push([distance, feature.Elevation.Start]);
+
+                                if (feature.Elevation.Grade < 1) {
+                                    lineColor = '#236b31';
+                                } else if (feature.Elevation.Grade <= 1.3) {
+                                    lineColor = '#424a9e';
+                                } else if (feature.Elevation.Grade <= 3) {
+                                    lineColor = '#ff63e8';
+                                } else {
+                                    lineColor = '#ff0207';
+                                }
+
+                                if (feature.Elevation.Start < feature.Elevation.End) {
+                                    elevationIncline += feature.Elevation.End - feature.Elevation.Start
+                                }
+                            }
+
+                            let strokeWidth = 2;
+                            if (feature.Paved) {
+                                strokeWidth = 3;
+                                pavedDistance += feature.Length;
+                            }
+
                             let points = [];
                             feature.Coordinates.forEach(function(point) {
                                 points.push(new OpenLayers.Geometry.Point(point.Lng, point.Lat).transform(epsg4326, projectTo));
@@ -77,32 +120,109 @@
                                 new OpenLayers.Geometry.LineString(points)
                             );
 
-                            let lineColor = '#000000';
-                            if (feature.Options.ElevationCost < 1) {
-                                lineColor = '#236b31';
-                            } else if (feature.Options.ElevationCost == 1) {
-                                lineColor = '#000000';
-                            } else if (feature.Options.ElevationCost <= 1.3) {
-                                lineColor = '#424a9e';
-                            } else if (feature.Options.ElevationCost <= 3) {
-                                lineColor = '#ff0207';
-                            } else if (feature.Options.ElevationCost <= 5) {
-                                lineColor = '#d60c10';
-                            } else {
-                                lineColor = '#a81013';
-                            }
-
                             vector.style = {
-                                strokeWidth: 3,
-                                strokeColor: lineColor
+                                strokeWidth: strokeWidth,
+                                strokeColor: lineColor,
                             };
                             vectorLayer.addFeatures(vector);
 
                             map.addLayer(vectorLayer);
+                            distance += feature.Length;
+
+                            if (feature.Elevation != null) {
+                                endElevation = feature.Elevation.End
+                            }
                         });
+
+                        chartData.push([distance, endElevation]);
+                        updateChartData(chart, chartData)
+
+                        let pavedPercentage = Math.round(pavedDistance/distance*100*100)/100;
+                        $('#overall-length').text(Math.round(distance/1000 * 100) / 100 + " km");
+                        $('#paved-percentage').text(Math.round(pavedPercentage*100)/100 + '%');
+                        $('#unpaved-percentage').text(Math.round((100-pavedPercentage)*100)/100 + '%');
+                        $('#incline').text(Math.round(elevationIncline*100)/100 + ' m');
+                        $('#route-data-container a#download-kml').attr("href", "http://localhost:8000/create-kml?from="+routeFrom+"&to="+routeTo);
+                        $('#route-data-container').show();
                     }
                 });
             });
+        </script>
+
+        <script>
+            let chart = initializeChart([]);
+
+            function updateChartData(chart, elevationData) {
+                chart.update({
+                    series: [{
+                        data: elevationData
+                    }]
+                });
+            }
+
+            function initializeChart() {
+                // Now create the chart
+                return Highcharts.chart('chart-container', {
+                    chart: {
+                        type: 'area',
+                        zoomType: 'x',
+                        panning: true,
+                        panKey: 'shift',
+                        scrollablePlotArea: {
+                            minWidth: 600
+                        }
+                    },
+
+                    title: {
+                        text: 'Route elevation'
+                    },
+
+                    xAxis: {
+                        labels: {
+                            format: '{value} m'
+                        },
+                        minRange: 5,
+                        title: {
+                            text: 'Distance'
+                        },
+                    },
+
+                    yAxis: {
+                        startOnTick: true,
+                        endOnTick: false,
+                        maxPadding: 0.35,
+                        title: {
+                            text: null
+                        },
+                        labels: {
+                            format: '{value} m'
+                        },
+                    },
+
+                    tooltip: {
+                        headerFormat: 'Distance: {point.x:.1f} m<br>',
+                        pointFormat: 'Elevation: {point.y:.1f} m',
+                        shared: true
+                    },
+
+                    legend: {
+                        enabled: false
+                    },
+
+                    series: [{
+                        data: [],
+                        lineColor: Highcharts.getOptions().colors[1],
+                        color: Highcharts.getOptions().colors[2],
+                        fillOpacity: 0.5,
+                        name: 'Elevation',
+                        marker: {
+                            enabled: false
+                        },
+                        threshold: null
+                    }]
+
+                });
+            }
         </script>
     </body>
 </html>
