Added nullCLI implementation Use goroutines in route Create grade osm-srtm service to clean up grade ways command

--- a/web/example_website.html
+++ b/web/example_website.html
@@ -14,6 +14,7 @@
         </div>
         <select id="routing_mode">
             <option value="normal">Normal routing</option>
+            <option value="easiest">Easiest route (just account elevation)</option>
             <option value="only_unpaved_account_elevation">Only unpaved (account elevation)</option>
             <option value="only_unpaved_hardcore">Only unpaved (hardcode)</option>
             <option value="no_length_care_normal">I don't care about the length</option>
