Load graph once Fix elevation graph bug

--- a/web/example_website.html
+++ b/web/example_website.html
@@ -34,7 +34,7 @@
             map = new OpenLayers.Map("mapdiv");
             map.addLayer(new OpenLayers.Layer.OSM());
 
-            let centerLonLat = new OpenLayers.LonLat(8.88049, 53.10173)
+            let centerLonLat = new OpenLayers.LonLat(23.8074396, 38.0005183)
                 .transform(
                     new OpenLayers.Projection("EPSG:4326"),
                     map.getProjectionObject()
