--- a/web/example_website_from_to.html
+++ b/web/example_website_from_to.html
@@ -43,6 +43,15 @@
     <p>Unpaved roads: <strong id="unpaved-percentage"></strong></p>
     <p>Total incline: <strong id="incline"></strong></p>
     <a id="download-kml" href="#">Download KML</a>
+
+    <h2>Elevation profile</h2>
+    <p>Flat: <strong id="flat-length"></strong></p>
+    <p>Easy: <strong id="easy-length"></strong></p>
+    <p>Medium: <strong id="medium-length"></strong></p>
+    <p>Hard (paved): <strong id="hard-length"></strong></p>
+    <p>Hard (unpaved): <strong id="hard-unpaved-length"></strong></p>
+    <p>Very hard (paved): <strong id="very-hard-length"></strong></p>
+    <p>Very hard (unpaved): <strong id="very-hard-unpaved-length"></strong></p>
 </div>
 
 <div id="route-description-container" style="height: 200px; width: 35%; padding-left: 20px; display: none; float: left;">
@@ -50,7 +59,6 @@
     <div class="description">
     </div>
 </div>
-
 
 <script
         src="https://code.jquery.com/jquery-3.4.1.min.js"
@@ -140,6 +148,13 @@
         let previousDistanceDescriptionTxt = 0;
         let previousDescriptionOsmId = 0;
         let previousOsmDescriptionLink = '';
+        let totalDistanceFlat = 0;
+        let totalDistanceEasy = 0;
+        let totalDistanceMedium = 0;
+        let totalDistanceHard = 0;
+        let totalDistanceHardUnpaved = 0;
+        let totalDistanceVeryHard = 0;
+        let totalDistanceVeryHardUnpaved = 0;
 
         let routeFeatures = JSON.parse(result);
 
@@ -149,14 +164,40 @@
                 chartData.push([distance, feature.elev.start]);
 
                 grade = (feature.elev.end - feature.elev.start) * 100 / feature.distance;
-                if (grade < 1) {
-                    lineColor = '#236b31';
-                } else if (grade <= 1.3) {
-                    lineColor = '#424a9e';
+
+                if (grade <= 1.3) {
+                    lineColor = '#5e9e5d';
+                    elevationDescriptionTxt = "Flat or decline";
+                    totalDistanceFlat += feature.distance;
                 } else if (grade <= 3) {
-                    lineColor = '#ff63e8';
+                    lineColor = '#5eccbb';
+                    elevationDescriptionTxt = "Easy uphill";
+                    totalDistanceEasy += feature.distance;
+                    // Slightly uphill but not particularly challenging
+                } else if (grade <= 5) {
+                    lineColor = '#9d58b0';
+                    elevationDescriptionTxt = "Medium to hard uphill";
+                    totalDistanceMedium += feature.distance;
+                    //A manageable gradient that can cause fatigue over long periods especially unpaved.
+                } else if (grade <= 9) {
+                    lineColor = '#a3241d';
+                    elevationDescriptionTxt = "Hard uphill (hike-a-bike on uppaved)";
+                    if (feature.type !== 'paved') {
+                        totalDistanceHardUnpaved += feature.distance;
+                    } else {
+                        totalDistanceHard += feature.distance;
+                    }
+
+                    // Hard on asphalt, could be hike a bike for unpaved roads
                 } else {
-                    lineColor = '#ff0207';
+                    lineColor = '#751a2e';
+                    elevationDescriptionTxt = "Extremely hard";
+                    if (feature.type !== 'paved') {
+                        totalDistanceVeryHardUnpaved += feature.distance;
+                    } else {
+                        totalDistanceVeryHard += feature.distance;
+                    }
+                    // So challenging that could be hike a bike even in asphalt
                 }
 
                 if (feature.elev.start < feature.elev.end) {
@@ -168,6 +209,11 @@
             if (feature.type === 'paved') {
                 strokeWidth = 3;
                 pavedDistance += feature.distance;
+                pavedDescriptionTxt = "<img src='car.png' />";
+            } else if (feature.type === 'unpaved') {
+                pavedDescriptionTxt = "<img src='jeep.png' />";
+            } else {
+                pavedDescriptionTxt = "<img src='hiking.png' />";
             }
 
             let points = [];
@@ -190,24 +236,6 @@
 
             if (feature.elev != null) {
                 endElevation = feature.elev.end
-            }
-
-            if (feature.type === 'paved') {
-                pavedDescriptionTxt = "<img src='car.png' />";
-            } else if (feature.type === 'unpaved') {
-                pavedDescriptionTxt = "<img src='jeep.png' />";
-            } else {
-                pavedDescriptionTxt = "<img src='hiking.png' />";
-            }
-
-            if (grade <= 1.5) {
-                elevationDescriptionTxt = "Very Easy";
-            } else if (grade <= 4) {
-                elevationDescriptionTxt = "Medium incline";
-            } else if (grade <= 7) {
-                elevationDescriptionTxt = "Hard incline";
-            } else {
-                elevationDescriptionTxt = "Very Hard incline";
             }
 
             if (previousPavedDescriptionTxt !== '' && (previousPavedDescriptionTxt !== pavedDescriptionTxt || previousElevationDescriptionTxt !== elevationDescriptionTxt)) {
@@ -248,6 +276,15 @@
         $('#paved-percentage').text(Math.round(pavedPercentage*100)/100 + '%');
         $('#unpaved-percentage').text(Math.round((100-pavedPercentage)*100)/100 + '%');
         $('#incline').text(Math.round(elevationIncline*100)/100 + ' m');
+
+        $('#flat-length').text(totalDistanceFlat + ' m');
+        $('#easy-length').text(totalDistanceEasy + ' m');
+        $('#medium-length').text(totalDistanceMedium + ' m');
+        $('#hard-length').text(totalDistanceHard + ' m');
+        $('#hard-unpaved-length').text(totalDistanceHardUnpaved + ' m');
+        $('#very-hard-length').text(totalDistanceVeryHard + ' m');
+        $('#very-hard-unpaved-length').text(totalDistanceVeryHardUnpaved + ' m');
+
         $('#route-info-container a#download-kml').attr("href", "http://localhost:8000/create-kml?from="+routeFrom+"&to="+routeTo);
         $('#route-info-container').show();
         $('#route-description-container .description').html("<table>"+routeDescriptionRowsHtml+"</table>");
