Backing up. Almost done. Need to do a final manual testing

--- a/web/example_website_from_to.html
+++ b/web/example_website_from_to.html
@@ -39,8 +39,8 @@
 
 <div>
     <select id="routing_mode">
-        <option value="bicycle">Mountain bike</option>
-        <option value="foot">Foot</option>
+        <option value="mtb">Mountain bike</option>
+        <option value="hike">Foot</option>
     </select>
 </div>
 
